force-app/main/default/objects/Task_Outcome__c/Task_Outcome__c.object-meta.xml
<CustomObject>
    <label>Task Outcome</label>
    <nameField>
        <label>Task Outcome  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Outcomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>