force-app/main/default/objects/Task_Outcome__c/fields/From_Task__c.field-meta.xml
<CustomField>
    <fullName>From_Task__c</fullName>
    <label>From Task</label>
    <referenceTo>Workflow_Task__c</referenceTo>
    <relationshipLabel>Task Outcomes</relationshipLabel>
    <relationshipName>Task_Outcomes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>