force-app/main/default/objects/Task_Outcome__c/fields/Outcome_will_close_Case__c.field-meta.xml
<CustomField>
    <fullName>Outcome_will_close_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify if an outcome is going to close a case</description>
    <label>Outcome will close Case</label>
    <type>Checkbox</type>
</CustomField>