force-app/main/default/objects/Task_Outcome__c/fields/Update_Case_Reopening_Reason__c.field-meta.xml
<CustomField>
    <fullName>Update_Case_Reopening_Reason__c</fullName>
    <label>Update Case Reopening Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>