force-app/main/default/objects/Task_Outcome__c/fields/Update_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Update_Case_Status__c</fullName>
    <label>Update Case Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>