force-app/main/default/objects/Task_Outcome__c/fields/Update_Workflow_Step__c.field-meta.xml
<CustomField>
    <fullName>Update_Workflow_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Update Workflow Step</label>
    <referenceTo>Workflow_Step__c</referenceTo>
    <relationshipLabel>Task Outcomes</relationshipLabel>
    <relationshipName>Task_Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>